# cpp-core

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  FFI.md  LICENSE  README.md
.github/workflows/: block_pr_check_labels.yml  build.yml  build_compile_tests_and_bindgen_smoke.yml  build_linux.yml  build_windows.yml  ci.yml  compile_checks.yml  doxygen.yml
cmake/: clang-toolchain.cmake  cpp_core_config.cmake.in  export_ast_json.cmake  gcc-toolchain.cmake  get_version_from_git.cmake  mingw-toolchain.cmake  msvc-toolchain.cmake
docs/: api_reference.md  deno_ffi.md  ffi-metadata.md  overview.md
docs/doxygen-theme/: header.html
include/: cpp_core.h
include/cpp_core/: abi_registry.hpp  error_callback.h  error_handling.hpp  ffi_metadata.hpp  helpers.h  helpers.hpp  module_api.h  reflection.hpp  reflection.test.cpp  result.hpp  scope_guard.hpp  serial.h  serial_config.hpp  serial_config.test.cpp  serial_sequential.h  status_code.h  status_code.test.cpp  status_code_registry.hpp  status_codes.h  status_codes.hpp  strong_types.hpp  strong_types.test.cpp  unique_resource.hpp  validation.hpp  version.h.in
include/cpp_core/detail/: sequential_dispatch.h
include/cpp_core/ffi/: abi_function_registry.hpp  status_code_descriptors.hpp
include/cpp_core/interface/: get_version.h  sequential.h  serial_abort_read.h  serial_abort_write.h  serial_clear_buffer_in.h  serial_clear_buffer_out.h  serial_close.h  serial_drain.h  serial_get_baudrate.h  serial_get_config.h  serial_get_cts.h  serial_get_data_bits.h  serial_get_dcd.h  serial_get_dsr.h  serial_get_flow_control.h  serial_get_parity.h  serial_get_ports_info.h  serial_get_ri.h  serial_get_stop_bits.h  serial_in_bytes_total.h  serial_in_bytes_waiting.h  serial_list_ports.h  serial_monitor_ports.h  serial_open.h  serial_out_bytes_total.h  serial_out_bytes_waiting.h  serial_read.h  serial_read_line.h  serial_read_until.h  serial_read_until_sequence.h  serial_send_break.h  serial_set_baudrate.h  serial_set_data_bits.h  serial_set_dtr.h  serial_set_error_callback.h  serial_set_flow_control.h  serial_set_parity.h  serial_set_read_callback.h  serial_set_rts.h  serial_set_stop_bits.h  (+4 more)
include/cpp_core/interface/sequential/: all.h  get_version_sequential.h  serial_abort_read_sequential.h  serial_abort_write_sequential.h  serial_clear_buffer_in_sequential.h  serial_clear_buffer_out_sequential.h  serial_close_sequential.h  serial_drain_sequential.h  serial_get_ports_info_sequential.h  serial_in_bytes_total_sequential.h  serial_in_bytes_waiting_sequential.h  serial_open_sequential.h  serial_out_bytes_total_sequential.h  serial_out_bytes_waiting_sequential.h  serial_read_line_sequential.h  serial_read_sequential.h  serial_read_until_sequence_sequential.h  serial_read_until_sequential.h  serial_set_error_callback_sequential.h  serial_set_read_callback_sequential.h  serial_set_write_callback_sequential.h  serial_write_sequential.h  set_queue_mode_sequential.h
include/cpp_core/internal/: sequential_dispatch.h
include/cpp_core/internal/sequential/: call.h  dispatch_state.h  ensure_worker_running.h  execute_in_queue.h  handle_states.h  handle_states_mutex.h  state_for_handle.h  worker_loop.h
test/: hello.cxx  main.cpp
tests/: ffi_metadata.test.cpp  ffi_metadata_compile_test.cpp  helper_types.test.cpp  result.test.cpp  status_code.test.cpp  status_code_compile_test.cpp
tools/: check_generated_deno_symbols.cmake  check_generated_typescript_bindings.cmake  clang_ast_to_ffi_json.py  generate_deno_symbols.cpp  generate_typescript_bindings.cpp
